@@ -1,4 +1,4 @@
-; $Id: views.info,v 1.7.6.33 2010-05-27 20:02:46 dereine Exp $
+; $Id: views.info,v 1.7.6.34 2010-05-27 20:27:58 dereine Exp $
 name = Views
 description = Create customized lists and queries from your database.
 package = Views
@@ -20,6 +20,7 @@ files[] = handlers/views_handler_argument_string.inc
 files[] = handlers/views_handler_argument_group_by_numeric.inc
 files[] = handlers/views_handler_field.inc
 files[] = handlers/views_handler_field_xss.test
+files[] = handlers/views_handler_field_file_size.test
 files[] = handlers/views_handler_field_counter.inc
 files[] = handlers/views_handler_field_group_by_numeric.inc
 files[] = handlers/views_handler_field_boolean.inc
